--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,15 @@
 @use 'reboot';
 @use 'buttons';
+@use 'cards';
 
-
+body {
+  background-color: #e2e8f0;  
+  font-family: Arial, Helvetica, sans-serif;
+}
+header,
+main {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0.5rem;
+}
  
