--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -101,6 +101,42 @@ button:hover {
   color: #0284c7;
 }
 
+.skeleton {
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.skeleton-img {
+  width: 100%;
+  height: 500px;
+}
+
+.skeleton-text {
+  height: 1rem;
+  width: 80%;
+  margin-bottom: 1rem;
+  border-radius: 0.125rem;
+}
+
+.skeleton-date {
+  width: 20%;
+}
+
+.skeleton-btn {
+  width: 4rem;
+  height: 2rem;
+  border-radius: 0.125rem;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: #f1f5f9;
+    opacity: 40%;
+  }
+  100% {
+    background-color: #f1f5f9;
+    opacity: 95%;
+  }
+}
 body {
   background-color: #e2e8f0;
   font-family: Arial, Helvetica, sans-serif;
