--- a/scss/_skeleton.scss
+++ b/scss/_skeleton.scss
@@ -3,7 +3,7 @@
 }
 .skeleton-img {
     width: 100%;
-    height: 500px;
+    height: 400px;
 }
 .skeleton-text {
     height: 1rem;
@@ -18,6 +18,12 @@
     width: 4rem;
     height: 2rem;
     border-radius: 0.125rem;
+}
+
+@media screen and (min-width: 500px) {
+    .skeleton-img {
+        height: 580px;
+    }
 }
 
 @keyframes skeleton-loading {
